[gd_scene load_steps=2 format=2]

[ext_resource path="res://question.gd" type="Script" id=1]

[node name="question" type="Node2D"]
position = Vector2( 497.128, -1.12247 )
script = ExtResource( 1 )

[node name="question_control" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0

[node name="question_label" type="RichTextLabel" parent="question_control"]
margin_top = 50.0
margin_right = 50.0
margin_bottom = 100.0

[node name="answers_control" type="Control" parent="question_control"]
margin_right = 40.0
margin_bottom = 40.0

[node name="answer1" type="Button" parent="question_control/answers_control"]
margin_left = -150.0
margin_top = 300.0
margin_right = -100.0
margin_bottom = 350.0

[node name="answer2" type="Button" parent="question_control/answers_control"]
margin_left = -50.0
margin_top = 300.0
margin_bottom = 350.0

[node name="answer3" type="Button" parent="question_control/answers_control"]
margin_left = 50.0
margin_top = 300.0
margin_right = 100.0
margin_bottom = 350.0

[node name="answer4" type="Button" parent="question_control/answers_control"]
margin_left = 150.0
margin_top = 300.0
margin_right = 200.0
margin_bottom = 350.0
